1. VS-related bugfixes 2. Added a new VS-app

--- a/similarity_search/test/bunit.vcxproj.filters
+++ b/similarity_search/test/bunit.vcxproj.filters
@@ -16,6 +16,9 @@
     <ClCompile Include="test_timer.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test_object.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source Files">
