--- a/similarity_search/src/NonMetricSpaceLib.vcxproj.filters
+++ b/similarity_search/src/NonMetricSpaceLib.vcxproj.filters
@@ -136,6 +136,9 @@
     <ClCompile Include="distcomp_sparse_scalar_fast.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="memory.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\distcomp.h">
