--- a/sample_standalone_app/sample_standalone_app2.vcxproj
+++ b/sample_standalone_app/sample_standalone_app2.vcxproj
@@ -221,7 +221,7 @@
     </ProjectReference>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="test_bench.cc" />
+    <ClCompile Include="sample_standalone_app2.cc" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(SolutionDir)src\NonMetricSpaceLib.vcxproj">
