Finally a working version of the checking utility.

--- a/similarity_search/lshkit/CMakeLists.txt
+++ b/similarity_search/lshkit/CMakeLists.txt
@@ -1,4 +1,4 @@
-include_directories(${PROJECT_SOURCE_DIR}/lshkit/include ${Boost_INCLUDE_DIR})
+include_directories(${PROJECT_SOURCE_DIR}/lshkit/include ${PROJECT_SOURCE_DIR}/include ${Boost_INCLUDE_DIR})
 
 set(lshkit_SRCS
   src/mplsh.cpp
