--- a/data/data_conv/sqfd/makefile
+++ b/data/data_conv/sqfd/makefile
@@ -1,7 +1,7 @@
 EXEC = sqfd_feature
 LIBS = `pkg-config --libs --cflags opencv` -lpthread
 CC = g++
-CPPFLAGS = -I/usr/local/include/eigen3 -Wall -std=c++11 -Ofast
+CPPFLAGS = -I/usr/local/include/eigen3 -I/usr/include/eigen3 -Wall -std=c++11 -Ofast
 
 OBJS = $(patsubst %.cc, %.o, $(wildcard *.cc))
 HDRS = $(wildcard *.h)
