Fix Windows build #58

--- a/similarity_search/src/NonMetricSpaceLib.vcxproj
+++ b/similarity_search/src/NonMetricSpaceLib.vcxproj
@@ -174,12 +174,24 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\include\distcomp.h" />
+    <ClInclude Include="..\include\distcomp_edist.h" />
+    <ClInclude Include="..\include\eval_metrics.h" />
     <ClInclude Include="..\include\eval_results.h" />
     <ClInclude Include="..\include\experimentconf.h" />
     <ClInclude Include="..\include\experiments.h" />
+    <ClInclude Include="..\include\factory\init_methods.h" />
+    <ClInclude Include="..\include\factory\init_spaces.h" />
     <ClInclude Include="..\include\factory\method\omedrank.h" />
+    <ClInclude Include="..\include\factory\method\perm_lsh_bin.h" />
+    <ClInclude Include="..\include\factory\method\projection_index_incremental.h" />
+    <ClInclude Include="..\include\factory\method\proj_vptree.h" />
+    <ClInclude Include="..\include\factory\method\small_world_rand_old.h" />
+    <ClInclude Include="..\include\factory\space\space_edist.h" />
     <ClInclude Include="..\include\factory\space\space_savch.h" />
+    <ClInclude Include="..\include\factory\space\space_sqfd.h" />
+    <ClInclude Include="..\include\floatdiff.h" />
     <ClInclude Include="..\include\global.h" />
+    <ClInclude Include="..\include\gold_standard.h" />
     <ClInclude Include="..\include\incremental_quick_select.h" />
     <ClInclude Include="..\include\index.h" />
     <ClInclude Include="..\include\init.h" />
@@ -190,19 +202,32 @@
     <ClInclude Include="..\include\meta_analysis.h" />
     <ClInclude Include="..\include\methodfactory.h" />
     <ClInclude Include="..\include\method\omedrank.h" />
+    <ClInclude Include="..\include\method\perm_lsh_bin.h" />
+    <ClInclude Include="..\include\method\projection_index_incremental.h" />
+    <ClInclude Include="..\include\method\small_world_rand_old.h" />
+    <ClInclude Include="..\include\method\vptree_old.h" />
     <ClInclude Include="..\include\object.h" />
     <ClInclude Include="..\include\params.h" />
     <ClInclude Include="..\include\permutation_type.h" />
     <ClInclude Include="..\include\permutation_utils.h" />
+    <ClInclude Include="..\include\ported_boost_progress.h" />
     <ClInclude Include="..\include\pow.h" />
+    <ClInclude Include="..\include\projection.h" />
     <ClInclude Include="..\include\query.h" />
+    <ClInclude Include="..\include\query_creator.h" />
+    <ClInclude Include="..\include\randproj_util.h" />
     <ClInclude Include="..\include\rangequery.h" />
+    <ClInclude Include="..\include\report.h" />
     <ClInclude Include="..\include\searchoracle.h" />
     <ClInclude Include="..\include\simddebug.h" />
     <ClInclude Include="..\include\simdutils.h" />
     <ClInclude Include="..\include\space.h" />
     <ClInclude Include="..\include\spacefactory.h" />
+    <ClInclude Include="..\include\space\space_leven.h" />
+    <ClInclude Include="..\include\space\space_sqfd.h" />
+    <ClInclude Include="..\include\space\space_string.h" />
     <ClInclude Include="..\include\space\space_vector_gen.h" />
+    <ClInclude Include="..\include\tune.h" />
     <ClInclude Include="..\include\utils.h" />
     <ClInclude Include="..\include\ztimer.h" />
     <ClInclude Include="..\include\method\bbtree.h" />
@@ -244,6 +269,7 @@
     <ClInclude Include="..\include\space\space_sparse_vector_inter.h" />
     <ClInclude Include="..\include\space\space_vector.h" />
     <ClCompile Include="distcomp_bregman.cc" />
+    <ClCompile Include="distcomp_edist.cc" />
     <ClCompile Include="distcomp_js.cc" />
     <ClCompile Include="distcomp_lp.cc" />
     <ClCompile Include="distcomp_rankcorr.cc" />
@@ -256,9 +282,18 @@
     <ClCompile Include="logging.cc" />
     <ClCompile Include="memory.cc" />
     <ClCompile Include="method\omedrank.cc" />
+    <ClCompile Include="method\perm_lsh_bin.cc" />
+    <ClCompile Include="method\projection_index_incremental.cc" />
+    <ClCompile Include="method\small_world_rand_old.cc" />
+    <ClCompile Include="method\vptree_old.cc" />
+    <ClCompile Include="params.cc" />
+    <ClCompile Include="projection.cc" />
     <ClCompile Include="query.cc" />
+    <ClCompile Include="randproj_util.cc" />
     <ClCompile Include="rangequery.cc" />
     <ClCompile Include="searchoracle.cc" />
+    <ClCompile Include="space\space_sqfd.cc" />
+    <ClCompile Include="space\space_string.cc" />
     <ClCompile Include="utils.cc" />
     <ClCompile Include="space\space_bit_hamming.cc" />
     <ClCompile Include="space\space_bregman.cc" />
