--- a/similarity_search/src/experiment.vcxproj.filters
+++ b/similarity_search/src/experiment.vcxproj.filters
@@ -4,7 +4,7 @@
     <ClCompile Include="main.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="params.cc">
+    <ClCompile Include="params_cmdline.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
